--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: KF7HVM
 
 # Short bio or description (displayed in the header)
-description: Status: building site
+description: Status - building site
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
