--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: KF7HVM
 
 # Short bio or description (displayed in the header)
-description: "Status - Listening 147.26 [+ 114.8] / 146.52"
+description: "Listening 147.26 [+ 114.8] / 146.52"
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
