--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ name: KF7HVM
 # Short bio or description (displayed in the header)
 description: "Listening 147.26 [+ 114.8] / 146.52"
 
-# URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+# CC Attribution 3.0 Unported. Author: Popcic [iconfinder.com - "Line Free" collection]
+avatar: https://raw.githubusercontent.com/mfurer/kf7hvm-com/master/images/wireless_antenna.svg
 
 #
 # Flags below are optional
