--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,8 @@ name: KF7HVM
 
 # Short bio or description (displayed in the header)
 #description: "Listening 147.26 [+ 114.8] / 146.52"
-description: off the air
+description: "Listening 147.26 [+ 114.8]"
+#description: off the air
 
 # CC Attribution 3.0 Unported. Author: Popcic [iconfinder.com - "Line Free" collection]
 avatar: https://raw.githubusercontent.com/masenf/kf7hvm-com/master/images/wireless_antenna.svg
