--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ name: KF7HVM
 # Short bio or description (displayed in the header)
 #description: "Listening 147.26 [+ 114.8] / 146.52"
 #description: "Listening 147.26 [+ 114.8]"
-description: off the air
+description: Very High Frequency
 #description: "Linux User Net 147.04 [+ 100]"
 #description: scanning...
 
@@ -57,7 +57,7 @@ baseurl: ""
 # !! You don't need to change any of the configuration flags below !!
 #
 
-permalink: /:title/
+permalink: pretty
 
 # The release of Jekyll Now that you're using
 version: v1.2.0
