--- a/_config.yml
+++ b/_config.yml
@@ -57,6 +57,7 @@ permalink: pretty
 
 # staticman (comments) configuration
 staticman_url: https://kf7hvm-staticman.herokuapp.com/v2/entry/masenf/kf7hvm-com/master/comments
+staticman_log_url: https://kf7hvm-staticman.herokuapp.com/v2/entry/masenf/kf7hvm-com/master/logentry
 
 # allow comments on all posts
 defaults:
