minor change to regenerate page maybe?

--- a/_data/qso/qso1606508896137-AD7QA-441.70000.yml
+++ b/_data/qso/qso1606508896137-AD7QA-441.70000.yml
@@ -7,7 +7,7 @@ machine: '41,505'
 mode: DMR
 t_call: AD7QA
 t_loc: ''
-comment: 'OR 1. Regarding network, hotspots, etc'
+comment: 'OR 1. Regarding network, hotspots, etc.'
 notes: ''
 hp: ''
 date: 1606508896
