--- a/_data/qso/qso1606514684971-K1CZA-441.70000.yml
+++ b/_data/qso/qso1606514684971-K1CZA-441.70000.yml
@@ -7,7 +7,7 @@ machine: '41,505'
 mode: DMR
 t_call: K1CZA
 t_loc: 'Lacey, WA'
-comment: Camping in the GP in cargo camper van
+comment: OR 1. Camping in the GPNF in cargo camper van
 notes: ''
 hp: ''
 date: 1606514684
