--- a/_data/qso/qso1606512888663-NO7RF-441.70000.yml
+++ b/_data/qso/qso1606512888663-NO7RF-441.70000.yml
@@ -7,7 +7,7 @@ machine: '41,505'
 mode: DMR
 t_call: NO7RF
 t_loc: ''
-comment: Use tech@pnwdigital.net to report network / repeater problems
+comment: WA 1. Use tech@pnwdigital.net to report network / repeater problems
 notes: ''
 hp: ''
 date: 1606512888
