--- a/_data/qso/qso1606539493985-KG7TDC-441.70000.yml
+++ b/_data/qso/qso1606539493985-KG7TDC-441.70000.yml
@@ -7,7 +7,7 @@ machine: '41,505'
 mode: DMR
 t_call: KG7TDC
 t_loc: Wenatchee
-comment: 'On a dog walk. Cold, bit of fog/clouds. On a CS580.'
+comment: 'WA 2. On a dog walk. Cold, bit of fog/clouds. On a CS580.'
 notes: ''
 hp: ''
 date: 1606539493
