--- a/_data/qso/qso1606608120656-KD6RRR-441.70000.yml
+++ b/_data/qso/qso1606608120656-KD6RRR-441.70000.yml
@@ -8,7 +8,7 @@ mode: DMR
 t_call: KD6RRR
 t_loc: Klamath Falls
 comment: >-
-  1st week in DMR, several WW contacts. also long time HF guy, dream rig yaesu
+  OR 1. 1st week in DMR, several WW contacts. also long time HF guy, dream rig yaesu
   FT-991a
 notes: ''
 hp: ''
