--- a/_data/qso/qso1606705681536-WL7AQ-440.9625.yml
+++ b/_data/qso/qso1606705681536-WL7AQ-440.9625.yml
@@ -1,6 +1,6 @@
 _id: 41579710-32b9-11eb-a008-25d3a8c7f8f0
 m_call: KF7HVM
-m_loc: Poplar
+m_loc: Tillamook Head Trail
 start: '1606686780'
 frequency: '440.9625'
 machine: ''
