--- a/_data/qso/qso1606677421207-WA7RPM-147.26000.yml
+++ b/_data/qso/qso1606677421207-WA7RPM-147.26000.yml
@@ -1,6 +1,6 @@
 _id: 74e2a6c0-3277-11eb-9c97-fd581e22c955
 m_call: KF7HVM
-m_loc: Poplar
+m_loc: 'US-30 W. of Rainier'
 start: '1606674600'
 frequency: '147.26000'
 machine: '53,408'
