--- a/_data/qso/qso1606793939519-KC7FTS-147.26000.yml
+++ b/_data/qso/qso1606793939519-KC7FTS-147.26000.yml
@@ -1,6 +1,6 @@
 _id: bf42c370-3386-11eb-b712-c7801da82b4e
 m_call: KF7HVM
-m_loc: Poplar
+m_loc: Longview, 30th and Pacific Way.
 start: '1606793400'
 frequency: '147.26000'
 machine: '53,408'
