--- a/_data/qso/qso1607219201995-KD7BBJ-147.16.yml
+++ b/_data/qso/qso1607219201995-KD7BBJ-147.16.yml
@@ -2,8 +2,8 @@ _id: e3736560-3764-11eb-b904-8fb99287f9b9
 m_call: KF7HVM
 m_loc: I-5 N. Mi 46
 start: '1607191200'
-frequency: '147.16'
-machine: ''
+frequency: '147.26000'
+machine: '53,408'
 mode: FM
 t_call: KD7BBJ
 t_loc: Castle Rock
