--- a/_data/qso/qso1607320176648-K7VKT-441.70000.yml
+++ b/_data/qso/qso1607320176648-K7VKT-441.70000.yml
@@ -4,7 +4,7 @@ m_loc: Poplar
 start: '1607318949'
 frequency: '441.70000'
 machine: '41,505'
-mode: FM
+mode: DMR
 t_call: K7VKT
 t_loc: 'Hillsboro, OR'
 comment: >-
