--- a/_data/qso/qso1607320176648-K7VKT-441.70000.yml
+++ b/_data/qso/qso1607320176648-K7VKT-441.70000.yml
@@ -8,7 +8,7 @@ mode: DMR
 t_call: K7VKT
 t_loc: 'Hillsboro, OR'
 comment: >-
-  Getting local repeaters programmed. Getting back into the hobby after 2 decade
+  OR 1. Getting local repeaters programmed. Getting back into the hobby after 2 decade
   hiatus. Engineer at nvidia.
 notes: ''
 hp: ''
