--- a/_data/qso/qso1607553105695-KD7BBJ-441.70000.yml
+++ b/_data/qso/qso1607553105695-KD7BBJ-441.70000.yml
@@ -4,7 +4,7 @@ m_loc: Poplar
 start: '1607552700'
 frequency: '441.70000'
 machine: '41,505'
-mode: FM
+mode: DMR
 t_call: KD7BBJ
 t_loc: I-90 W near Snoqualmie
 comment: >-
