--- a/_data/qso/qso1608161563427-AF7ZA-146.88000.yml
+++ b/_data/qso/qso1608161563427-AF7ZA-146.88000.yml
@@ -7,7 +7,7 @@ machine: '41,142'
 mode: FM
 t_call: AF7ZA
 t_loc: N.C.S.
-comment: CARA Tuesday 1900 net ✅ Sam's first checkin
+comment: "CARA Tuesday 1900 net ✅ Sam's first checkin"
 notes: ''
 hp: ''
 date: 1608161563
