--- a/_data/qso/qso1609823770746-KB7DNG-430.4375.yml
+++ b/_data/qso/qso1609823770746-KB7DNG-430.4375.yml
@@ -6,7 +6,7 @@ frequency: '430.4375'
 machine: ''
 mode: DMR
 t_call: KB7DNG
-t_loc: ''
+t_loc: 'Sedro Wholley, WA'
 comment: >-
   Oly Penn. 31531. I returned a radio check. Suggested that other stations set a
   hotspot security password if they have trouble.
