--- a/_data/qso/qso1610226735621-KC7OBR-147.26000.yml
+++ b/_data/qso/qso1610226735621-KC7OBR-147.26000.yml
@@ -1,6 +1,6 @@
 _id: 591b88e0-52bf-11eb-a8b7-6deb1c940ad7
 m_call: KF7HVM
-m_loc: Poplar
+m_loc: Longview
 start: '1610226667'
 frequency: '147.26000'
 machine: '53,408'
