--- a/_data/qso/qso1610599156578-N7QME-441.70000.yml
+++ b/_data/qso/qso1610599156578-N7QME-441.70000.yml
@@ -4,7 +4,7 @@ m_loc: Poplar
 start: '1610598180'
 frequency: '441.70000'
 machine: '41,505'
-mode: FM
+mode: DMR
 t_call: N7QME
 t_loc: ''
 comment: >-
