--- a/_data/qso/qso1611117476014-AF7EX-146.88000.yml
+++ b/_data/qso/qso1611117476014-AF7EX-146.88000.yml
@@ -5,7 +5,7 @@ start: '1611111600'
 frequency: '146.88000'
 machine: '41,142'
 mode: FM
-t_call: AF7EX
+t_call: AG7EX
 t_loc: N.C.S.
 comment: CARA Tuesday 1900 net ✅
 notes: ''
