--- a/_data/qso/qso1617681780358-K1CZA-441.70000.yml
+++ b/_data/qso/qso1617681780358-K1CZA-441.70000.yml
@@ -1,6 +1,6 @@
 _id: fa1b19c0-968c-11eb-8a7a-1955e7fdcedc
 m_call: KF7HVM
-m_loc: Poplar
+m_loc: I-5 SB Woodland
 start: '1617584400'
 frequency: '441.70000'
 machine: '41,505'
