--- a/_data/qso/qso1618889287422-WA7HAA-441.70000.yml
+++ b/_data/qso/qso1618889287422-WA7HAA-441.70000.yml
@@ -1,6 +1,6 @@
 _id: 6c6a44a0-a188-11eb-bc8a-2ba40092a644
 m_call: KF7HVM
-m_loc: Poplar
+m_loc: Ocean Beach Hwy, Longview, WA
 start: '1618884000'
 frequency: '441.70000'
 machine: '41,505'
