--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "KF7HVM blog",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack-cli --config ./webpack.config.js"
   },
   "repository": {
     "type": "git",
