--- a/_data/qso/qso1636502665834-KF7FOY-147.26000.yml
+++ b/_data/qso/qso1636502665834-KF7FOY-147.26000.yml
@@ -5,7 +5,7 @@ start: '1636502620'
 frequency: '147.26000'
 machine: '53,408'
 mode: FM
-t_call: KF7FOY
+t_call: KJ7FOY
 t_loc: Longview
 comment: Regarding the 147.58 all star node; will direct to Mike's post on LCARA group
 notes: ''
