--- a/_data/qso/qso1643054987188-K7NDO-442.82500.yml
+++ b/_data/qso/qso1643054987188-K7NDO-442.82500.yml
@@ -1,7 +1,7 @@
 _id: 93f717f0-7d51-11ec-ab7e-25913eed3c3f
 m_call: KF7HVM
-m_loc: Poplar
-start: '1643054906'
+m_loc: E. Columbia Heights Rd.
+start: '1643054306'
 frequency: '442.82500'
 machine: '53,557'
 mode: FM
